--- a/WebApi/Views/Admin/Users.cshtml
+++ b/WebApi/Views/Admin/Users.cshtml
@@ -163,7 +163,7 @@
         <span>по</span>
         <input type="date" id="dateTo"/>
 
-        <span class="stat-result" id="registrationResult">Выберите период</span>
+        <span class="stat-result" id="registrationResult">0</span>
         <span>человек</span>
     </div>
 </div>
