--- a/WebApi/Views/AuthMvc/Register.cshtml
+++ b/WebApi/Views/AuthMvc/Register.cshtml
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>Регистрация</title>
+    <link rel="icon" type="image/x-icon" href="~/images/icon.ico" />
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
