--- a/WebApi/Views/Shared/_ClientLayout.cshtml
+++ b/WebApi/Views/Shared/_ClientLayout.cshtml
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="~/images/icon.ico" />
     <style>
         body {
             margin: 0;
