update: политики авторизации и кнопка выйти

--- a/WebApi/Views/Shared/_ClientLayout.cshtml
+++ b/WebApi/Views/Shared/_ClientLayout.cshtml
@@ -93,6 +93,7 @@
         <a href="@Url.Action("ProfileInfo", "ClientMvc")">Профиль</a>
         <a href="@Url.Action("Themes", "ClientMvc")">Темы</a>
         <a href="@Url.Action("TestVariants", "ClientMvc")">Практика</a>
+        <a href="@Url.Action("Logout", "ClientMvc")">Выйти</a>
     </aside>
 
     <div class="main">
