--- a/WebApi/Views/Shared/_AdminLayout.cshtml
+++ b/WebApi/Views/Shared/_AdminLayout.cshtml
@@ -88,6 +88,7 @@
         <a href="/Admin/Index">Главная</a>
         <a href="/Admin/Users">Пользователи</a>
         <a href="/Admin/Themes">Темы</a>
+        <a href="/Admin/Logout">Выйти</a>
     </div>
     <div class="main">
         
